# X3872_gen

./: .gitignore  CMakeLists.txt  README.md
data/: x3872_settings.cmnd
generator/: CMakeLists.txt  x_3872_gen.cpp
generator/include/: HistogramRegistry.h
